[package]
name = "pluto"
version = "0.1.0"
edition = "2021"
description = "Pluto distributed proxy gateway system"
authors = ["Manjeet Pardeshi <work@jeet.codes>"]
license = "MIT"
repository = "https://github.com/JeetSamespace/pluto"
readme = "README.md"

[[bin]]
name = "pluto-gateway"
path = "src/bin/pluto_gateway.rs"

[[bin]]
name = "pluto-orbit"
path = "src/bin/pluto_orbit.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
tokio-test = "0.4"
hyper = "1.4.1"
env_logger = "0.11.5"
hcl-rs = "0.18.0"
quinn = "0.11.5"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
